@@ -1,3 +1,9 @@
+2014-12-24  Uros Bizjak  <ubizjak@gmail.com>
+	    Ben Elliston  <bje@au.ibm.com>
+	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	* libiberty.h (xasprintf): Declare.
+
 2014-12-11  Uros Bizjak  <ubizjak@gmail.com>
             Ben Elliston  <bje@au.ibm.com>
             Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
