@@ -1,3 +1,13 @@
+2014-12-24  Uros Bizjak  <ubizjak@gmail.com>
+	    Ben Elliston  <bje@au.ibm.com>
+	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
+
+	* xasprintf.c: New file.
+	* Makefile.in (CFILES): Add xasprintf.c.
+	(REQUIRED_OFILES): Add xasprintf.$(objext).
+	(xasprintf.$(objext)): New target.
+	* functions.texi: Regenerate.
+
 2014-12-11  Uros Bizjak  <ubizjak@gmail.com>
             Ben Elliston  <bje@au.ibm.com>
             Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
