@@ -1,3 +1,8 @@
+2014-12-24  Uros Bizjak  <ubizjak@gmail.com>
+
+	* gengtype.h (xasprintf): Remove declaration.
+	* gengtype.c (xasprintf): Remove.
+
 2014-12-24  Nick Clifton  <nickc@redhat.com>
 
 	PR target/64160
